pagina con menu

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <nav>
+  <div>
     <ul class="menu">
       <li><a href="#">Home</a></li>
       <li><a href="#">Servicios</a></li>
@@ -15,6 +15,21 @@
       <li><a href="#">Planes</a></li>
       <li><a href="#">Contacto</a></li>
     </ul>
-  </nav>
+  </div>
+  <div class="sidebar">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Servicios</a></li>
+        <li><a href="#">Opciones</a></li>
+        <li><a href="#">Planes</a></li>
+        <li><a href="#">Contacto</a></li>
+      </ul>
+    </div>
+   
+    <main class="contenido">
+      <h1>Esto sería el contenido principal</h1>
+      <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veniam obcaecati consectetur distinctio animi ducimus soluta ratione earum? Quaerat distinctio debitis a, nobis quae labore quos deleniti quod quas exercitationem explicabo.</p>
+    </main>
+  </div>
 </body>
 </html>
